# tefs

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/apidocs/: modules.doctree  tefs.doctree
.doctrees/notebooks/: usage.doctree
.github/workflows/: documentation.yaml  release_pypi_github.yaml  tests.yaml
_sources/: index.md.txt
_sources/apidocs/: modules.md.txt  tefs.md.txt
apidocs/: modules.html  tefs.html
docs/source/: conf.py  index.md  index.rst
docs/source/notebooks/: usage.ipynb
notebooks/: usage.html  usage.ipynb
src/tefs/: __init__.py  core.py  estimation.py  metrics.py  plotting.py  types.py  utils.py
tests/: test_core.py  test_estimation.py  test_utils.py
